# parallax-voxel-ray-marcher

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  plan.md  plan.txt  voxel.frag  voxel.vert
Lab1-RayTracing/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  main.cpp  swCamera.cpp  swCamera.h  swIntersection.cpp  swIntersection.h  swMaterial.h  swPrimitive.h  swRay.h  swScene.cpp  swScene.h  swSphere.cpp  swSphere.h  swTriangle.cpp  swTriangle.h  swVec3.h
res/scenes/: README.md
shaders/EDAN35/: accumulate_lights.frag  fallback.frag  fill_gbuffer.frag  voxel.frag  voxel.vert
src/EDAN35/: CMakeLists.txt  assignment2.cpp  project.cpp  project.hpp
src/EDAN35/project/: App.cpp  DemoApp.cpp  Renderer.cpp  VoxelRenderer.cpp  VoxelVolume.cpp
src/EDAN35/util/: 3DCA.cpp  AppState.cpp  Cell.cpp  Cell.hpp  Direction.cpp  GameObject.cpp  IntersectionTests.cpp  Transform.cpp  cellularAutomata.cpp  cellularAutomata.hpp  colorPalette.cpp  colorPalette.hpp  defaultColorPalette.cpp  demo_scenes.cpp  noise.cpp  parametric_shapes.cpp  parametric_shapes.hpp  perlin.cpp  perlinNoise.cpp  sdf.cpp  settings.cpp  terrain.cpp  terrain.hpp  terrain_generator.cpp  ui.cpp  voxel_util.cpp
src/core/: FPSCamera.h  FPSCamera.inl  WindowManager.cpp  config.hpp.in  helpers.cpp  node.cpp  node.hpp
